# BrainGit

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260101_0000_0001_initial_schema.py
infra/: Caddyfile  oracle_setup.sh
infra/systemd/: brainbot.service
scripts/: auth_google.py  auth_microsoft.py  seed_topics.py
src/brainbot/: config.py  db.py  main.py  models.py
src/brainbot/agents/: base.py  brain_agent.py  calendar_agent.py  email_agent.py  general_agent.py  router.py  routine_agent.py  todo_agent.py
src/brainbot/connectors/: gmail.py  google_calendar.py  oauth_store.py  outlook.py  outlook_calendar.py
src/brainbot/llm/: client.py  tools.py
src/brainbot/memory/: conversation.py  embeddings.py  vector_store.py
src/brainbot/scheduler/: evening.py  jobs.py  morning.py
src/brainbot/telegram/: send.py  topics.py  webhook.py
src/brainbot/utils/: logging.py  time.py
tests/: conftest.py
tests/integration/: test_webhook_endpoint.py
tests/unit/: test_oauth_store.py  test_send_escape.py  test_time_helpers.py  test_tool_registry.py  test_topics.py  test_webhook_parse.py
