[project]
name = "brainbot"
version = "0.1.0"
description = "Personal AI assistant accessed via a Telegram group chat."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "brainbot" }]

dependencies = [
    # Web / async
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",

    # Telegram
    "python-telegram-bot[ext]>=21.6",

    # LLM
    "google-genai>=0.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",

    # Config / validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Google APIs
    "google-api-python-client>=2.150",
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",

    # Microsoft Graph
    "msgraph-sdk>=1.12",
    "msal>=1.31",
    "azure-identity>=1.19",

    # Scheduling & time
    "apscheduler>=3.10",
    "tzdata>=2024.2",

    # Crypto / secrets
    "cryptography>=43.0",

    # Logging
    "structlog>=24.4",

    # Utilities
    "python-dateutil>=2.9",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brainbot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "ASYNC", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google_auth_oauthlib.*", "apscheduler.*", "msal.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
